fixed bug where HOME was hidden on mobile when viewing /account page.

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -74,6 +74,10 @@
   font-size: .6em !important;
 }
 
+.tab-display-none{
+  display: none !important;
+}
+
 /* For Desktop */
 
 @media screen and (min-width: 480px) {
